--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body { font-family: sans-serif; }
   width: 200px;
   height: 260px;
 /*   border: 1px solid #CCC; */
-  margin: 40px 0;
+  margin: 20px 10px;
   perspective: 600px;
 }
 
@@ -46,4 +46,13 @@ body { font-family: sans-serif; }
 }
 .hidden {
     visibility: hidden;
+}
+
+.main {
+  margin: 0 auto ;
+  width: 80%;
+}
+
+h1 {
+  text-align: center;
 }
